# train_dashboard_api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
client/: .gitignore  platformio.ini
client/main/: CMakeLists.txt  Kconfig.projbuild  application.hpp  idf_component.yml  main.cpp  system_bus.hpp
client/main/app/: application.hpp  system_bus.hpp
client/main/battery/tasks/: battery_level_task.cpp  battery_level_task.hpp
client/main/components/: motor.cpp  motor.hpp  nfc_reader.cpp  nfc_reader.hpp  nfc_tag.cpp  nfc_tag.hpp  passive_buzzer.hpp
client/main/events/: event_queue.hpp  mailbox.hpp
client/main/motor/modules/: motor.cpp  motor.hpp
client/main/networking/: tcp_client.cpp  tcp_client.hpp
client/main/nfc/tasks/: nfc_task.cpp  (+1 more)
client/main/rtos/: event_queue.hpp  mailbox.hpp
client/main/task_events/: motor_command.hpp  rail_command.hpp  station_command.hpp  tcp_send_event.hpp
client/main/tasks/: motor_task.cpp  motor_task.hpp  nfc_task.cpp  nfc_task.hpp  tcp_listen_task.cpp  tcp_manager_task.cpp  tcp_manager_task.hpp  tcp_send_task.cpp  tcp_send_task.hpp  tcp_task.hpp  train_controller_task.cpp  train_controller_task.hpp
client/main/tcp/: tcp_client.cpp
client/main/train_controller/: passive_buzzer.hpp  train_controller_task.cpp  train_controller_task.hpp
client/main/utils/: ndef_parser.cpp  ndef_parser.hpp  rail_location.hpp  rail_nfc.hpp  stack_size_calc.hpp  tcp_message_handler.cpp  tcp_message_handler.hpp
client/main/wifi/: wifi.hpp
client/src/: CMakeLists.txt  main.cpp
client/src/networking/: tcp_client.cpp  tcp_client.hpp  wifi.cpp  wifi.hpp
client/src/task_events/: tcp_send_event.hpp
client/src/tasks/: tcp_task.hpp
common/: CMakeLists.txt
common/src/: packet_registry.hpp  registry.hpp  service_config.hpp
common/src/common/: packet_registry.hpp  registry.hpp  service_config.hpp
common/src/common/api/: registry.hpp  service_config.hpp  types.hpp
common/src/common/contract/: registry.hpp
common/src/common/core/: net_types.hpp  packet_registry.hpp  serialisation.hpp  serialise.hpp
common/src/common/messages/: battery_status.hpp  handshake.hpp  headlight.hpp  init_esp.hpp  motor.hpp  motor_control.hpp  motor_status.hpp  rail_destination.hpp  rail_location.hpp  restart_esp.hpp
common/src/types/: init_esp.hpp  restart_esp.hpp
headless/src/networking/: tcp_connection.hpp  tcp_server.hpp
host/: CMakeLists.txt
host/src/: main.cpp
host/src/host/: application.cpp  application.hpp  main.cpp  train_status_storage.hpp
host/src/host/endpoints/: motor_endpoint.hpp  train_status_endpoint.hpp
host/src/host/logging/: assert.hpp  logger.cpp  logger.hpp
host/src/host/networking/: mdns_service.hpp  tcp_callbacks.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_io_state.cpp  tcp_io_state.hpp  tcp_server.cpp  tcp_server.hpp
host/src/host/networking/http/: http_utils.hpp
host/src/host/networking/http/endpoints/: headlight_endpoint.hpp  motor_endpoint.hpp  ping_endpoint.hpp  train_endpoint.hpp  train_status_endpoint.hpp
host/src/host/networking/tcp/: tcp_connection.cpp  tcp_connection.hpp  tcp_io_state.cpp  tcp_io_state.hpp  tcp_server.cpp  tcp_server.hpp
host/src/host/protocol/: handshake_manager.cpp  handshake_manager.hpp  http_utils.hpp  mdns_service.hpp
host/src/host/rail_network/: rail.hpp  rail_connection.hpp  rail_network.hpp  rail_pathing.hpp  track.hpp
host/src/host/rail_network/storage/: rail.hpp  rail_storage.hpp  track.hpp
host/src/host/storage/: train_storage.hpp
host/src/host/utils/: handshake_manager.cpp  handshake_manager.hpp  http_utils.hpp
host/src/logging/: assert.hpp  logger.hpp
host/src/networking/: mdns_service.hpp  tcp_callbacks.hpp  tcp_connection.hpp  tcp_io_state.hpp  tcp_server.hpp
scripts/: dns_broadcaster.py  dns_responder.py
server_gui/src/: test.h
server_gui/src/networking/: tcp_common.hpp  tcp_connection.hpp  tcp_server.hpp
tests/: CMakeLists.txt  test_int_serialisation.cpp  test_packet_registry.cpp  test_serialisation.cpp
(+41 files in other folders)
